--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,11 @@
   "description": "CompanyBusinessUnitGui module",
   "license": "proprietary",
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.1",
+    "spryker/kernel": "^3.0.0",
+    "spryker/gui": "^3.13.0",
+    "spryker/symfony": "^3.0.0",
+    "spryker/company-business-unit": "^1.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
@@ -11,7 +15,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Spryker\\": "src/Spryker/",
+      "Spryker\\": "src/Spryker/"
     }
   },
   "autoload-dev": {
