--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "spryker/kernel": "^3.0.0",
     "spryker/gui": "^3.13.0",
     "spryker/symfony": "^3.0.0",
+    "spryker/company": "^1.0.0 || ^2.0.0",
     "spryker/company-business-unit": "^1.0.0"
   },
   "require-dev": {
