--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
-    "spryker/kernel": "^3.0.0",
-    "spryker/gui": "^3.13.0",
-    "spryker/symfony": "^3.0.0",
     "spryker/company": "^1.0.0 || ^2.0.0",
-    "spryker/company-business-unit": "^1.0.0"
+    "spryker/company-business-unit": "^1.0.0",
+    "spryker/gui": "^3.13.0",
+    "spryker/kernel": "^3.0.0",
+    "spryker/symfony": "^3.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
@@ -17,11 +17,6 @@
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "SprykerTest\\": "tests/SprykerTest/"
     }
   },
   "minimum-stability": "dev",
