--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "php": ">=7.1",
     "spryker/company": "^1.0.0",
     "spryker/company-business-unit": "^2.1.0",
+    "spryker/company-business-unit-gui-extension": "^1.0.0",
     "spryker/gui": "^3.13.0",
     "spryker/kernel": "^3.0.0",
     "spryker/symfony": "^3.0.0",
