PS-2661: Refactored after AA review.

--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,11 @@
   },
   "config": {
     "sort-packages": true
+  },
+  "require-dev": {
+    "spryker/company-user-gui": "*"
+  },
+  "suggest": {
+    "spryker/company-user-gui": "If you want to use CompanyUserGui plugins."
   }
 }
