--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,20 @@
     "spryker/symfony": "^3.0.0",
     "spryker/util-text": "^1.2.0"
   },
+  "require-dev": {
+    "spryker/company-user": "*",
+    "spryker/customer": "*",
+    "spryker/propel": "*",
+    "spryker/testify": "*"
+  },
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "SprykerTest\\": "tests/SprykerTest/"
     }
   },
   "minimum-stability": "dev",
