--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,12 @@
     "license": "proprietary",
     "require": {
         "php": ">=7.4",
+        "spryker/business-on-behalf-gui-extension": "^1.0.0",
         "spryker/company": "^1.0.0",
         "spryker/company-business-unit": "^2.9.0",
         "spryker/company-business-unit-gui-extension": "^1.0.0",
         "spryker/company-user-gui-extension": "^1.0.0",
-        "spryker/gui": "^3.33.0",
+        "spryker/gui": "^3.43.0",
         "spryker/kernel": "^3.30.0",
         "spryker/symfony": "^3.0.0",
         "spryker/util-text": "^1.2.0"
