TE-10886 Dynamic store. (#9457)
TE-10886 Release Dynamic Store

--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,10 @@
     "require-dev": {
         "spryker/code-sniffer": "*",
         "spryker/company-user": "*",
+        "spryker/container": "*",
         "spryker/customer": "*",
         "spryker/propel": "*",
+        "spryker/store": "*",
         "spryker/testify": "*"
     },
     "autoload": {
