--- a/tests/SprykerTest/Zed/CompanyBusinessUnitGui/codeception.yml
+++ b/tests/SprykerTest/Zed/CompanyBusinessUnitGui/codeception.yml
@@ -28,3 +28,5 @@ suites:
                 - \SprykerTest\Shared\CompanyUser\Helper\CompanyUserHelper
                 - \SprykerTest\Zed\Company\Helper\CompanyHelper
                 - \SprykerTest\Zed\CompanyBusinessUnit\Helper\CompanyBusinessUnitHelper
+                - \SprykerTest\Service\Container\Helper\ContainerHelper
+                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
