--- a/tests/SprykerTest/Zed/CompanyBusinessUnitGui/codeception.yml
+++ b/tests/SprykerTest/Zed/CompanyBusinessUnitGui/codeception.yml
@@ -29,4 +29,5 @@ suites:
                 - \SprykerTest\Zed\Company\Helper\CompanyHelper
                 - \SprykerTest\Zed\CompanyBusinessUnit\Helper\CompanyBusinessUnitHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
-                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \SprykerTest\Zed\Store\Helper\StoreDependencyHelper
+                - \SprykerTest\Zed\Testify\Helper\Business\BusinessHelper
